<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">W_Painter</string>
    <string name="action_settings">Settings</string>
    <string name="WelcomeName">W. Olasiewicz</string>
    <string name="appTitle">W_Painter</string>
    <string name="startActivity_new">New</string>
    <string name="startActivity_erase">Erase</string>
    <string name="startActivity_painter">Paint</string>
    <string name="startActivity_paint">Paint</string>
    <string name="painterViev_selectPainter_Toast">First click the paint button</string>
    <string name="background_white">White</string>
    <string name="background_blue">Blue</string>
    <string name="background_red">Red</string>
    <string name="startActivity_backgroundDialog_title">Select background color:</string>
    <string name="startActivity_style">Style</string>
    <string name="startActivity_menu_New">New</string>
    <string name="startActivity_menu_Save">Save</string>
    <string name="startActivity_menu_OpenGalery">Open Galery</string>
    <string name="startActivity_menu_Dialog_New_Title">New drawing</string>
    <string name="startActivity_menu_Dialog_New_Message">Start new drawing (you will lose the current drawing)?</string>
    <string name="startActivity_menu_Dialog_Save_Title">Save drawing</string>
    <string name="startActivity_menu_Dialog_Save_Message">Save drawing to device Gallery?</string>
    <string name="startActivity_menu_failedSaveToBrowser_Toast">saved failure</string>
    <string name="bd_Obsluga_failedToLoadID">Failed to load ID!</string>
    <string name="bd_Obsluga_failedToCreateFile">Failed to create file!</string>
    <string name="startActivitybrowserOpenNotAvailable_Toast">Browser not available</string>
    <string name="browser_noMoreItem_Toast">No more items are available</string>
    <string name="browser_menu_Next">Next</string>
    <string name="browser_menu_Previous">Previous</string>
    <string name="browser_menu_Delete">Delete</string>
    <string name="browser_menu_Send">Send</string>
    <string name="browser_menu_Back">Back</string>
    <string name="browser_cannot_delete_Toast">Sorry - this can not be deleted</string>
    <string name="browser_dialog_delete_title">Delete</string>
    <string name="browser_dialog_delete_message">Are You sure?</string>
    <string name="startActivity_menu_Exit">Exit</string>
    <string name="startActivity_dialogExit_title">Exit</string>
    <string name="startActivity_dialogExit_message">Are You sure?</string>
    <string name="dialog_Yes">Yes</string>
    <string name="dialog_Cancel">Cancel</string>
    
    
  
</resources>
