<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/back_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:contentDescription="@string/background_white"
        android:src="@drawable/white" />

    <ImageButton
        android:id="@+id/back_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/background_blue"
        android:src="@drawable/blue" />

    <ImageButton
        android:id="@+id/back_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:contentDescription="@string/background_red"
        android:src="@drawable/red" />

</LinearLayout>